# soyeht-ios

./: .env.example  .gitignore  AGENTS.md  BUG_REPORT.md  CLAUDE.md  CODE_OF_CONDUCT.md  HANDOFF-2026-05-20.md  LICENSE  Makefile  NOTICE  Package.resolved  Package.swift  QA_TEST_PLAN.md  README.md  SECURITY.md  TODO.md  app_design.pen  window_design.pen
Native/RelayStreamGuestFFI/: .gitignore  Cargo.toml  Package.swift
Native/RelayStreamGuestFFI/Scripts/: build-relay-stream-guest-ffi-xcframework.sh  postprocess-uniffi-swift.sh
Native/RelayStreamGuestFFI/Smoke/: RelayStreamGuestFFISmoke.swift
Native/RelayStreamGuestFFI/Sources/relay_stream_guest_ffiFFI/: shim.c
Native/RelayStreamGuestFFI/Sources/relay_stream_guest_ffiFFI/include/: module.modulemap
Native/RelayStreamGuestFFI/Swift/: RelayStreamGuestDataPlaneClient.swift
Native/RelayStreamGuestFFI/SwiftTests/: RelayStreamGuestDataPlaneClientTests.swift
Native/RelayStreamGuestFFI/src/: lib.rs
QA/: INDEX.md  contract-smoke.sh
SwiftTerm-macOS.xcodeproj/: project.pbxproj
SwiftTerm.xcodeproj/: project.pbxproj
TerminalApp/: Base.xcconfig  Local.xcconfig.example  main.swift
docs/: 8-flow-validation-2026-05-21.md  api-contract-tmux-sessions.md  app-review-demo.md  architecture.md  claw-install-target.md  claw-setup-architecture.md  claw-store-architecture.md  claw-store-execution-plan.md  claw-store-score-plan.md  design-style-architecture-plan.md  dev-build-isolation.md  engine-protocol-version.md  engine-version.md  household-12-flow-matrix.md  identity-facade.md  index.html  iphone-loss-recovery-plan.md  (+28 more)
(+1007 files in other folders)
